--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content=" Explore how the National Student Financial Aid Scheme (NSFAS) helps South African students access higher education.">
 
  <meta name="robots" content="index,follow"> 
-  <link rel="canonical" href="https://imartinbeck.github.io/nsfas/">
+  <link rel="canonical" href="https://nsfas.pages.dev">
  
   <style>
     body {
