--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
  <img src="https://i.ibb.co/25TMMZF/1-5.jpg" style="max-width: 100%; height: auto;">
 </div>
 
-<h2> <a href="https://qualityvshop.netlify.app/">How Much Do Vapes Cost?</a></h2>
+<h2> <a href="https://imartinbeck.github.io/mynsfas/">The Most Common Challenges Faced by NSFAS Applicants</a></h2>
 
 
     <h2>1. Comprehensive Financial Support</h2>
