--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
  <meta name="robots" content="index,follow"> 
   <link rel="canonical" href="https://nsfas.pages.dev">
+ <meta name="google-site-verification" content="hHuSIAq3Ea97KJm525FcbNYaregkKjlqREb0BxbUZXo" />
  
   <style>
     body {
